--- a/_about.sass
+++ b/_about.sass
@@ -8,17 +8,21 @@
     .icon
         font-size: 35px
     .textbox
-        margin: 25px 0
-        width: 200px
+        width: 300px
         font-size: 25px
-        text-align: center
     .btn
-        border: 1px solid #000000
+        border: 1px solid #ffffff
         width: 200px
         &:hover
             background-color: #ffffff
+            .icon
+                color: #000000
+            h2
+                color: #000000
         .icon
             font-size: 20px
+            color: #ffffff
         h2
             font-size: 20px
             margin-left: 5px
+            color: #ffffff
