--- a/_footer.sass
+++ b/_footer.sass
@@ -24,4 +24,4 @@ footer
         font-size: 20px
         margin: 20px 0
     .son
-        background-color: #2c3e50
+        // background-color: #2c3e50
