--- a/_header.sass
+++ b/_header.sass
@@ -1,6 +1,6 @@
 header
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-    background-color: #343436
+    background-color: #2c3e50
     padding: 40px 0
     h1
         font-size: 30px
