--- a/_start.sass
+++ b/_start.sass
@@ -1,6 +1,7 @@
 #start
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
     background-color: #1abc9c
+    color: #ffffff
     .imgbox
         width: 250px
     h1
