--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ section {
 
 header {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #343436;
+  background-color: #2c3e50;
   padding: 40px 0;
 }
 header h1 {
@@ -54,6 +54,7 @@ header .icon {
 #start {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #1abc9c;
+  color: #ffffff;
 }
 #start .imgbox {
   width: 250px;
@@ -120,24 +121,30 @@ header .icon {
   font-size: 35px;
 }
 #about .textbox {
-  margin: 25px 0;
-  width: 200px;
+  width: 300px;
   font-size: 25px;
-  text-align: center;
 }
 #about .btn {
-  border: 1px solid #000000;
+  border: 1px solid #ffffff;
   width: 200px;
 }
 #about .btn:hover {
   background-color: #ffffff;
 }
+#about .btn:hover .icon {
+  color: #000000;
+}
+#about .btn:hover h2 {
+  color: #000000;
+}
 #about .btn .icon {
   font-size: 20px;
+  color: #ffffff;
 }
 #about .btn h2 {
   font-size: 20px;
   margin-left: 5px;
+  color: #ffffff;
 }
 
 #contactme h1 {
@@ -199,7 +206,4 @@ footer h2 {
   color: #ffffff;
   font-size: 20px;
   margin: 20px 0;
-}
-footer .son {
-  background-color: #2c3e50;
 }/*# sourceMappingURL=style.css.map */
