--- a/_contactme.sass
+++ b/_contactme.sass
@@ -13,10 +13,13 @@
     #message
         padding: 50px 50px
     .btn
-        border: 1px solid #000000
         padding: 20px 40px
-        background-color: #1abc9c
+        background-color: #4efc79
         &:hover
             background-color: #ffffff
+            border: 1px solid #000000
+            h2
+                color: #000000
         h2
             font-size: 25px
+            color: #ffffff
