--- a/_start.sass
+++ b/_start.sass
@@ -1,6 +1,6 @@
 #start
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-    background-color: #1abc9c
+    background-color: #4efc79
     color: #ffffff
     .imgbox
         width: 250px
